--- a/package.json
+++ b/package.json
@@ -1,36 +1,66 @@
 {
-  "name": "tailwind",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-slot": "^1.1.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.469.0",
-    "next": "14.2.13",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "postcss": "^8",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "tailwind",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "eslint --ext .ts,.tsx .",
+        "typecheck": "tsc --project tsconfig.json --noEmit",
+        "test": "jest",
+        "test:watch": "pnpm test --watch",
+        "test:snapshot": "pnpm test --updateSnapshot",
+        "test:ci": "pnpm test --ci --coverage",
+        "verification": "pnpm lint && pnpm typecheck && pnpm test:ci",
+        "test:e2e": "NEXTAUTH_SECRET=secret NEXTAUTH_URL=http://localhost:3000 playwright test",
+        "test:e2e:ci": "NEXTAUTH_SECRET=secret NEXTAUTH_URL=http://localhost:3000 playwright test",
+        "test:codegen": "playwright codegen http://localhost:3000"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^4.1.3",
+        "@playwright/test": "^1.50.1",
+        "@radix-ui/react-slot": "^1.1.1",
+        "@tanstack/react-query": "^5.67.1",
+        "axios": "^1.8.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "cors": "^2.8.5",
+        "jsonwebtoken": "^9.0.2",
+        "lucide-react": "^0.469.0",
+        "next": "14.2.13",
+        "next-auth": "^4.24.11",
+        "nookies": "^2.5.2",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.54.2",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7",
+        "whatwg-fetch": "^3.6.20",
+        "zod": "^3.24.2"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
+        "@types/jest": "^29.5.14",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.13",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-styled-components": "^7.2.0",
+        "msw": "^2.7.3",
+        "postcss": "^8",
+        "prettier": "^3.3.3",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
